kubernetes-manifests/prod/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-prod
  labels:
    name: portfolio-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: portfolio-prod
  name: web-prod
  labels:
    app: web-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-prod
  template:
    metadata:
      labels:
        app: web-prod
    spec:
      containers:
      - name: web-prod
        image: ghcr.io/crcasiswho/demostration-portfolio-application:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: portfolio-prod
  name: web-prod
spec:
  selector:
    app: web-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
